<resources>
    <string name="app_name">Twinown</string>

    <string name="action_settings">Settings</string>
    <string name="action_tweet">ツイート</string>
    <string name="action_toggle_quick_post">クイック投稿</string>
    <string name="action_change_account">アカウント変更</string>
    <string name="notice_change_account">アカウントを変更しました(%s)</string>

    <string name="pin_code_edit_text_hint">PINコードを入力してください</string>
    <string name="show_client_name">クライアント名 : %s </string>
    <string name="open_authorization_button_hint">認証画面を開く</string>
    <string name="change_client">認証クライアントを変更</string>
    <string name="error">エラーが発生しました</string>
    <string name="please_enter_pin_code">PINコードを入力してください</string>
    <string name="added_user_preference">アカウントを追加しました</string>

    <string name="user_stream_notification_ticker">Twitterストリームを起動しました</string>
    <string name="user_stream_notification_title">Twinown</string>
    <string name="user_stream_notification_text">Twitterストリーム接続中です</string>

    <string name="tweet_hint">ついーとする</string>
    <string name="tweet">TWEET</string>
    <string name="tweet_length">140</string>
    <string name="add">ADD</string>
    <string name="setting">設定</string>
    <string name="twitterActivity">通知</string>

    <string name="menu_action_reply">返信する</string>
    <string name="menu_action_rt">リツイート</string>
    <string name="menu_action_favorite">お気に入りに追加する</string>
    <string name="menu_action_delete_favorite">お気に入りを取り消す</string>
    <string name="menu_action_talk">会話を表示する</string>
    <string name="menu_action_delete">ツイートを削除する</string>
    <string name="menu_action_delete_rt">リツイートを取り消す</string>
    <string name="menu_action_open_browser">ブラウザで開く</string>
    <string name="menu_action_share">ツイートを共有する</string>

    <string name="error_user_show">"エラーが発生しました(ユーザ %s は表示できません)"</string>

    <string name="confirm_dialog">"確認ダイアログ"</string>
    <string name="delete_confirm">"(%s)を削除しますか？"</string>
    <string name="tweet_rt_confirm">"リツイートしますか？"</string>
    <string name="tweet_delete_rt_confirm">"リツイートを取り消しますか？"</string>
    <string name="tweet_delete_confirm">"ツイートを削除しますか？"</string>

    <string name="setting_action_account">アカウント設定</string>
    <string name="setting_action_tab">タブ設定</string>
    <string name="setting_action_appearance">外観設定</string>
    <string name="setting_action_twitter">Twitter設定</string>
    <string name="setting_action_client">クライアント設定</string>

    <string name="dialog_title_choose_tab_type">タブの種類を設定してください</string>
    <string name="dialog_title_choose_account">アカウントを選択してください</string>
    <string name="dialog_title_choose_list">リストを選択してください</string>
    <string name="dialog_title_tab_name">タブ名変更</string>
    <string name="dialog_hint_tab_name">タブ名変更</string>

    <string name="dialog_title_add_client">クライアント追加</string>
    <string name="dialog_hint_client_name">クライアント名</string>
    <string name="dialog_hint_client_consumer_key">コンシューマーキー</string>
    <string name="dialog_hint_client_consumer_secret">コンシューマーシークレット</string>

    <string name="dialog_title_choose_theme">テーマを選択してください</string>
    <string name="dialog_title_choose_load_count">読み込みツイート数を選択してください</string>
    <string name="setting_item_title_bar">タイトルバーを表示する</string>
    <string name="setting_item_tab_layout">タブを表示する</string>
    <string name="setting_item_quick_post">起動時にクイック投稿をオンにする</string>
    <string name="setting_item_quick_post_on_top">クイック投稿を上部に表示する</string>
    <string name="setting_item_show_created_at">投稿時間を表示する</string>
    <string name="setting_item_show_client_name">クライアント名を表示する</string>
    <string name="setting_item_show_thumbnail">サムネイルを表示する</string>

    <string name="preference_key_theme">preference_key_theme</string>
    <string name="preference_key_title_bar">preference_key_title_bar</string>
    <string name="preference_key_tab_layout">preference_key_tab_layout</string>
    <string name="preference_key_quick_post">preference_key_quick_post</string>
    <string name="preference_key_quick_post_on_top">preference_key_quick_post_on_top</string>
    <string name="preference_key_show_created_at">preference_show_created_at</string>
    <string name="preference_key_show_client_name">preference_show_client_name</string>
    <string name="preference_key_show_thumbnail">preference_show_thumbnail</string>
    <string name="preference_key_load_count">preference_key_load_count</string>
    <string name="preference_key_show_thumbnail_wifi_only">preference_key_show_thumbnail_wifi_only</string>

    <string name="title_activity_setting">設定</string>
    <string name="title_activity_tab_control">タブ設定</string>
    <string name="title_activity_appearance_control">外観設定</string>
    <string name="title_activity_twitter_control">Twitter設定</string>
    <string name="title_activity_client_control">クライアント設定</string>
    <string name="title_activity_auth">Twitter認証</string>
    <string name="title_activity_user">ユーザ</string>
    <string name="title_activity_talk">会話</string>
    <string name="title_activity_tweet">Twinownで投稿</string>
    <string name="setting_item_show_thumbnail_wifi_only">WiFi時のみ表示</string>
</resources>
