<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/preference_key_theme"
        android:title="@string/dialog_title_choose_theme"
        android:entries="@array/entries_list_preference_theme"
        android:entryValues="@array/entry_values_list_preference_theme"
        android:dialogTitle="@string/dialog_title_choose_theme" />
    <SwitchPreference
        android:key="@string/preference_key_title_bar"
        android:title="@string/setting_item_title_bar"
        android:defaultValue="true"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"/>
    <SwitchPreference
        android:key="@string/preference_key_tab_layout"
        android:title="@string/setting_item_tab_layout"
        android:defaultValue="false"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"/>
    <SwitchPreference
        android:key="@string/preference_key_quick_post"
        android:title="@string/setting_item_quick_post"
        android:defaultValue="false"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"/>
    <SwitchPreference
        android:key="@string/preference_key_quick_post_on_top"
        android:title="@string/setting_item_quick_post_on_top"
        android:defaultValue="false"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"/>
    <SwitchPreference
        android:key="@string/preference_key_show_created_at"
        android:title="@string/setting_item_show_created_at"
        android:defaultValue="true"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"/>
    <SwitchPreference
        android:key="@string/preference_key_show_client_name"
        android:title="@string/setting_item_show_client_name"
        android:defaultValue="true"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"/>
    <SwitchPreference
        android:key="@string/preference_key_show_thumbnail"
        android:title="@string/setting_item_show_thumbnail"
        android:defaultValue="true"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"/>
    <SwitchPreference
        android:key="@string/preference_key_show_thumbnail_wifi_only"
        android:title="@string/setting_item_show_thumbnail_wifi_only"
        android:defaultValue="false"
        android:switchTextOff="OFF"
        android:switchTextOn="ON"
        android:dependency="@string/preference_key_show_thumbnail"/>
</PreferenceScreen>
