<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">
    <group
        android:id="@+id/menu_action"
        android:checkableBehavior="single"
        android:orderInCategory="0">
        <item android:id="@+id/action_tweet"
              android:title="@string/action_tweet"
              app:showAsAction="never"/>
        <item android:id="@+id/action_toggle_quick_post"
              android:title="@string/action_toggle_quick_post"
              app:showAsAction="never"/>
    </group>
    <group
        android:id="@+id/menu_tab"
        android:checkableBehavior="single"
        android:orderInCategory="50">
    </group>
    <group
          android:id="@+id/menu_other"
          android:checkableBehavior="single"
          android:orderInCategory="100">
          <item android:id="@+id/action_settings"
                android:title="@string/action_settings"
                app:showAsAction="never"/>
    </group>
</menu>
