<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/quickPostView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="@dimen/preview_padding">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientNameHint">
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/clientNameEditText"
                  android:hint="@string/dialog_hint_client_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientKeyHint"
        android:layout_below="@id/clientNameHint">
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/clientKeyEditText"
                  android:hint="@string/dialog_hint_client_consumer_key"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/clientSecretHint"
        android:layout_below="@id/clientKeyHint">
        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/clientSecretEditText"
                  android:hint="@string/dialog_hint_client_consumer_secret"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        style="?android:buttonBarStyle"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/clientSecretHint">
        <Button style="?android:buttonBarButtonStyle"
                android:id="@+id/buttonCancel"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@android:string/cancel"/>
        <Button style="?android:buttonBarButtonStyle"
                android:id="@+id/buttonOk"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@android:string/ok"/>
    </LinearLayout>
</RelativeLayout>
