<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin">
    <ImageButton
        android:layout_width="@dimen/icon_size"
        android:layout_height="@dimen/icon_size"
        android:id="@+id/userIconButton"
        android:contentDescription="@android:string/untitled"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tweetTextInputLayout"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/userIconButton"
        android:layout_above="@+id/tweetButton">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tweetEditText"
            android:hint="@string/tweet_hint"
            android:inputType="textMultiLine"
            android:gravity="left|top"/>
    </android.support.design.widget.TextInputLayout>
    <ImageButton android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/tweetButton"
                 android:src="@drawable/ic_send_white"
                 android:contentDescription="@string/tweet"
                 android:layout_gravity="center"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentEnd="true"
                 android:layout_alignStart="@+id/userIconButton"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tweet_length"
        android:id="@+id/tweetLength"
        android:layout_above="@+id/tweetButton"
        android:layout_alignStart="@+id/tweetButton"
        android:gravity="center"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="@dimen/image_preview_size"
        android:layout_height="@dimen/image_preview_size"
        android:id="@+id/uploadImageView"
        android:layout_below="@+id/tweetLength"
        android:layout_toStartOf="@+id/tweetButton"
        android:visibility="gone"
        android:contentDescription="@android:string/untitled"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageUploadButton"
        android:src="@drawable/ic_image_white"
        android:layout_below="@+id/tweetLength"
        android:layout_alignParentStart="true"
        android:contentDescription="@android:string/untitled"/>
</RelativeLayout>
